Kubernetes_multinode/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-backend
spec:
  type: NodePort
  selector:
    app: streaming-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
