Kubernetes_multinode/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: netflix-frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/(.*)"
            backend:
              service:
                name: netflix-backend
                port:
                  number: 8080
  tls:
    - hosts:
        - yourdomain.com
      secretName: tls-secret
